[gd_scene load_steps=14 format=2]

[ext_resource path="res://menus/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Titillium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="Background_Animation" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background_Animation"]

[node name="Camera" type="Camera" parent="Background_Animation"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background_Animation"]

[node name="Panels" type="Node" parent="."]

[node name="Start" type="Panel" parent="Panels"]
anchor_bottom = 1.0
margin_right = 330.0

[node name="Title_Label" type="Label" parent="Panels/Start"]
margin_right = 330.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Keress"
align = 1
valign = 1

[node name="Button_Continue" type="Button" parent="Panels/Start"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -200.0
margin_right = 320.0
margin_bottom = -160.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="Button_New_Game" type="Button" parent="Panels/Start"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -150.0
margin_right = 320.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 3 )
text = "New Game"

[node name="Button_Settings" type="Button" parent="Panels/Start"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -100.0
margin_right = 320.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="Button_Quit" type="Button" parent="Panels/Start"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 320.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="Settings" type="Panel" parent="Panels"]
margin_right = 660.0
margin_bottom = 720.0

[node name="Label_Title" type="Label" parent="Panels/Settings"]
margin_right = 330.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 6 )
text = "Settings"
align = 1
valign = 1

[node name="Label_Mouse_Sensitivity" type="Label" parent="Panels/Settings"]
margin_left = 10.0
margin_top = 100.0
margin_right = 280.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 7 )
text = "Mouse Sensitivity"
valign = 1

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="Panels/Settings"]
margin_left = 290.0
margin_top = 100.0
margin_right = 590.0
margin_bottom = 140.0
ticks_on_borders = true

[node name="Label_Joypad_Sensitivity" type="Label" parent="Panels/Settings"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="HSlider_Joypad_Sensitivity" type="HSlider" parent="Panels/Settings"]
visible = false
margin_right = 16.0
margin_bottom = 16.0
ticks_on_borders = true

[node name="CheckButton_VSync" type="CheckButton" parent="Panels/Settings"]
margin_left = 10.0
margin_top = 250.0
margin_right = 360.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 8 )
text = "V-Sync"

[node name="CheckButton_Fullscreen" type="CheckButton" parent="Panels/Settings"]
margin_left = 10.0
margin_top = 300.0
margin_right = 360.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Fullscreen"

[node name="CheckButton_Debug" type="CheckButton" parent="Panels/Settings"]
margin_left = 10.0
margin_top = 570.0
margin_right = 360.0
margin_bottom = 610.0
custom_fonts/font = SubResource( 10 )
text = "Debug Display"

[node name="Button_Back" type="Button" parent="Panels/Settings"]
margin_left = 10.0
margin_top = 670.0
margin_right = 320.0
margin_bottom = 710.0
custom_fonts/font = SubResource( 11 )
text = "Back"
